--- a/dum.html
+++ b/dum.html
@@ -284,10 +284,10 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="#" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
+<li class="nav-item mr-0"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
 </a></li>
-<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
+<li class="nav-item mr-0"><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
 </a></li>
 </ul>-->
