--- a/solar-epc-components.html
+++ b/solar-epc-components.html
@@ -140,30 +140,30 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
-<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="turnkey-assembly-lines.html" title="Turnkey Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
+<li class="nav-item mr-0"><a href="cell-testers.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="sorting-machine.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
+<li class="nav-item mr-0"><a href="welding-machines.html" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
-<li class="nav-item mr-0"><a href="#" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
-<li class="nav-item mr-0"><a href="#" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="semi-auto-prismatic-lines.html" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
+<li class="nav-item mr-0"><a href="automatic-lines.html" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
+<li class="nav-item mr-0"><a href="laser-welding-machines.html" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
+<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
+<li class="nav-item mr-0"><a href="prismatic-sorting-machines.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 </ul>
 </li>
 
 
 
-<li class="nav-item mr-0"><a href="#" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
+<li class="nav-item mr-0"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
 </a></li>
-<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
+<li class="nav-item mr-0"><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
 </a></li>
 </ul>
 </li>
@@ -258,30 +258,30 @@
 <li>
 <a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Lines">Turnkey Assembly Lines</a></li>
-<li><a href="#" title="Cell Testers">Cell Testers</a></li>
-<li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
-<li><a href="#" title="Welding Machines">Welding Machines</a></li>
+<li><a href="turnkey-assembly-lines.html" title="Turnkey Assembly Lines">Turnkey Assembly Lines</a></li>
+<li><a href="cell-testers.html" title="Cell Testers">Cell Testers</a></li>
+<li><a href="sorting-machine.html" title="Sorting Machine">Sorting Machine</a></li>
+<li><a href="welding-machines.html" title="Welding Machines">Welding Machines</a></li>
 </ul>
 </li>
 <!-- Two -->
 <li>
 <a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
 <ul>
-<li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
-<li><a href="#" title="Automatic Lines">Automatic Lines</a></li>
-<li><a href="#" title="Laser Welding Machines">Laser Welding Machines</a></li>
-<li><a href="#" title="Cell Testers">Cell Testers</a></li>
-<li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
+<li><a href="semi-auto-prismatic-lines.html" title="Semi Auto Lines">Semi Auto Lines</a></li>
+<li><a href="automatic-lines.html" title="Automatic Lines">Automatic Lines</a></li>
+<li><a href="laser-welding-machines.html" title="Laser Welding Machines">Laser Welding Machines</a></li>
+<li><a href="cell-testers-for-prismatic.html" title="Cell Testers">Cell Testers</a></li>
+<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="prismatic-sorting-machines.html" title="Sorting Machine">Sorting Machine</a></li>
 </ul>
 </li>
 
 <!-- Three -->
 
-<li><a href="#" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
-<li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="#" title="Other Machines">Other Machines</a></li>
+<li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
+<li><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
 
 </ul>
 </li>
