--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -3,37 +3,31 @@
 <head>
   <head>
 <!-- Title -->
-<title>Solar Aluminum Frame | Durable PV Module Frames - Indygreen Technologies</title>
+<title>BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies</title>
 
 <!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies supplies high-strength Solar Aluminum Frames for PV modules, ensuring durability, rigidity, and long-lasting performance in solar panel manufacturing." />
+<meta name="description" content="Indygreen Technologies provides advanced BESS container assembly lines for Lithium Battery Lines systems — ensuring efficient assembly, testing, and integration of battery packs for renewable energy, industrial, and commercial applications." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="solar aluminum frame, PV module frame, solar panel frame, aluminum frames for solar panels, durable solar frames, photovoltaic module frames, solar mounting frames, Indygreen Technologies" />
+<meta name="keywords" content="BESS container assembly lines, Lithium Battery Lines, battery pack assembly line, BESS production line, battery testing and integration, containerized battery solutions, Indygreen Technologies" />
 
-<!-- Robots -->
-<meta name="robots" content="index, follow" />
+<!-- Canonical Tag -->
+<link rel="canonical" href="https://www.indygreentech.com/bess-container-assembly-lines.html" />
 
-<!-- Author & Publisher -->
-<meta name="author" content="Indygreen Technologies" />
-<meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
-
-<!-- Open Graph -->
-<meta property="og:title" content="Solar Aluminum Frame | Durable PV Module Frames - Indygreen Technologies" />
-<meta property="og:description" content="Indygreen Technologies offers high-quality Solar Aluminum Frames for PV modules, providing durability, rigidity, and reliable performance in solar panel production." />
-<meta property="og:url" content="https://www.indygreentech.com/solar-aluminum-frame.html" />
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies" />
+<meta property="og:description" content="High-efficiency BESS container assembly lines for lithium batteries — designed for assembly, testing, and integration of battery packs in containerized energy storage systems." />
 <meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.indygreentech.com/bess-container-assembly-lines.html" />
+<meta property="og:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png" />
 <meta property="og:site_name" content="Indygreen Technologies" />
 
-<!-- Twitter Card -->
+<!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Solar Aluminum Frame | Durable PV Module Frames - Indygreen Technologies" />
-<meta name="twitter:description" content="Premium Solar Aluminum Frames by Indygreen Technologies for durable, rigid, and long-lasting PV module assembly." />
-
-<!-- Canonical -->
-<link rel="canonical" href="https://www.indygreentech.com/solar-aluminum-frame.html" />
-
-
+<meta name="twitter:title" content="BESS Container Assembly Lines for Lithium Battery Lines | Indygreen Technologies" />
+<meta name="twitter:description" content="Advanced BESS container assembly lines for Lithium Battery Lines — ensuring efficient assembly, testing, and integration for industrial, commercial, and renewable energy applications." />
+<meta name="twitter:image" content="https://www.indygreentech.com/images/bess-container-assembly-line.png" />
+<meta name="twitter:site" content="@IndygreenTech" />
 
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -319,24 +313,22 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/breadcumb.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Solar Aluminum Frame</h1>
+<h1 class="title text-white">BESS Container Assembly Lines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
+<a title="Homepage" href="lithium-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Raw Materials</a>
-<span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Solar Aluminum Frame</span>
+<span class="text-white">BESS Container Assembly Lines</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -348,10 +340,10 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/aluminum-frames.png" alt="Solar Aluminum Frame in India" title="Solar Aluminum Frame in India" class="w-100">
+        <img src="img/DEMO.png" alt="BESS Container Assembly Lines in India" title="BESS Container Assembly Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Solar Aluminum Frame</strong></h2>
+        <h2><strong>BESS Container Assembly Lines</strong></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
     </div>
 </div>
