--- a/cylindrical-batteries-lines.html
+++ b/cylindrical-batteries-lines.html
@@ -136,30 +136,30 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cylindrical Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Turnkey Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
-<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
-<li class="nav-item mr-0"><a href="#" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="turnkey-assembly-lines.html" title="Turnkey Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Lines</a></li>
+<li class="nav-item mr-0"><a href="cell-testers.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="sorting-machine.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
+<li class="nav-item mr-0"><a href="welding-machines.html" title="Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Prismatic Batteries Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
-<li class="nav-item mr-0"><a href="#" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
-<li class="nav-item mr-0"><a href="#" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
+<li class="nav-item mr-0"><a href="semi-auto-prismatic-lines.html" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
+<li class="nav-item mr-0"><a href="automatic-lines.html" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
+<li class="nav-item mr-0"><a href="laser-welding-machines.html" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
 <li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
-<li class="nav-item mr-0"><a href="#" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
+<li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
+<li class="nav-item mr-0"><a href="prismatic-sorting-machines.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 </ul>
 </li>
 
 
 
-<li class="nav-item mr-0"><a href="#" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
+<li class="nav-item mr-0"><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Container Assembly Lines
 </a></li>
-<li class="nav-item mr-0"><a href="#" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
+<li class="nav-item mr-0"><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="#" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
 </a></li>
 </ul>
 </li>
@@ -254,30 +254,30 @@
 <li>
 <a href="cylindrical-batteries-lines.html" title="Cylindrical Batteries Lines">Cylindrical Batteries Lines</a>
 <ul>
-<li><a href="#" title="Turnkey Assembly Lines">Turnkey Assembly Lines</a></li>
-<li><a href="#" title="Cell Testers">Cell Testers</a></li>
-<li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
-<li><a href="#" title="Welding Machines">Welding Machines</a></li>
+<li><a href="turnkey-assembly-lines.html" title="Turnkey Assembly Lines">Turnkey Assembly Lines</a></li>
+<li><a href="cell-testers.html" title="Cell Testers">Cell Testers</a></li>
+<li><a href="sorting-machine.html" title="Sorting Machine">Sorting Machine</a></li>
+<li><a href="welding-machines.html" title="Welding Machines">Welding Machines</a></li>
 </ul>
 </li>
 <!-- Two -->
 <li>
 <a href="prismatic-batteries-lines.html" title="Prismatic Batteries Lines">Prismatic Batteries Lines</a>
 <ul>
-<li><a href="#" title="Semi Auto Lines">Semi Auto Lines</a></li>
-<li><a href="#" title="Automatic Lines">Automatic Lines</a></li>
-<li><a href="#" title="Laser Welding Machines">Laser Welding Machines</a></li>
-<li><a href="#" title="Cell Testers">Cell Testers</a></li>
-<li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="#" title="Sorting Machine">Sorting Machine</a></li>
+<li><a href="semi-auto-prismatic-lines.html" title="Semi Auto Lines">Semi Auto Lines</a></li>
+<li><a href="automatic-lines.html" title="Automatic Lines">Automatic Lines</a></li>
+<li><a href="laser-welding-machines.html" title="Laser Welding Machines">Laser Welding Machines</a></li>
+<li><a href="cell-testers-for-prismatic.html" title="Cell Testers">Cell Testers</a></li>
+<li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="prismatic-sorting-machines.html" title="Sorting Machine">Sorting Machine</a></li>
 </ul>
 </li>
 
 <!-- Three -->
 
-<li><a href="#" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
-<li><a href="#" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="#" title="Other Machines">Other Machines</a></li>
+<li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
+<li><a href="lithium-battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
+<li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
 
 </ul>
 </li>
@@ -327,7 +327,7 @@
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="lithium-batteries-lines.html" title="Lithium Batteries" class="text-white"><i class="ti ti-home"></i>Lithium Batteries</a>
+<a title="Homepage" href="lithium-batteries-lines.html" title="Lithium Batteries" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white">Cylindrical Batteries Lines</span>
@@ -344,7 +344,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"><img src="img/assembly-line.png" class="card-img-top product-img" alt="Turnkey Assembly Line Cylindrical Batteries Lines in India" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"></a>
+        <a href="turnkey-assembly-lines.html" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"><img src="img/assembly-line.png" class="card-img-top product-img" alt="Turnkey Assembly Line Cylindrical Batteries Lines in India" title="Turnkey Assembly Line Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Turnkey Assembly Lines</h5>
@@ -352,7 +352,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="turnkey-assembly-lines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -361,7 +361,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Cell Testers Cylindrical Batteries Lines in India"><img src="img/cell-testers.png" class="card-img-top product-img" alt="Cell Testers Cylindrical Batteries Lines in India" title="Cell Testers Cylindrical Batteries Lines in India"></a>
+        <a href="cell-testers.html" title="Cell Testers Cylindrical Batteries Lines in India"><img src="img/cell-testers.png" class="card-img-top product-img" alt="Cell Testers Cylindrical Batteries Lines in India" title="Cell Testers Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cell Testers</h5>
@@ -369,7 +369,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="cell-testers.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -378,7 +378,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Sorting Machine Cylindrical Batteries Lines in India"><img src="img/sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine Cylindrical Batteries Lines in India" title="Sorting Machine Cylindrical Batteries Lines in India"></a>
+        <a href="sorting-machine.html" title="Sorting Machine Cylindrical Batteries Lines in India"><img src="img/sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine Cylindrical Batteries Lines in India" title="Sorting Machine Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Sorting Machine</h5>
@@ -386,7 +386,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="sorting-machine.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -399,7 +399,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Welding Machines Cylindrical Batteries Lines in India"><img src="img/welding-machines.png" class="card-img-top product-img" alt="Welding Machines Cylindrical Batteries Lines in India" title="Welding Machines Cylindrical Batteries Lines in India"></a>
+        <a href="welding-machines.html" title="Welding Machines Cylindrical Batteries Lines in India"><img src="img/welding-machines.png" class="card-img-top product-img" alt="Welding Machines Cylindrical Batteries Lines in India" title="Welding Machines Cylindrical Batteries Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Welding Machines</h5>
@@ -407,7 +407,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="welding-machines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
