--- a/semi-auto-prismatic-lines.html
+++ b/semi-auto-prismatic-lines.html
@@ -3,36 +3,31 @@
 <head>
   <head>
 <!-- Title -->
-<title>Solar Aluminum Frame | Durable PV Module Frames - Indygreen Technologies</title>
+<title>Semi-Automatic Lines for Prismatic Lithium Battery Manufacturing | Indygreen Technologies</title>
 
 <!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies supplies high-strength Solar Aluminum Frames for PV modules, ensuring durability, rigidity, and long-lasting performance in solar panel manufacturing." />
+<meta name="description" content="Indygreen Technologies provides semi-automatic lines for prismatic lithium battery manufacturing — combining automation and precision for efficient cell assembly, welding, and quality testing in battery production." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="solar aluminum frame, PV module frame, solar panel frame, aluminum frames for solar panels, durable solar frames, photovoltaic module frames, solar mounting frames, Indygreen Technologies" />
+<meta name="keywords" content="semi-automatic lines, prismatic battery assembly, lithium battery manufacturing, semi auto production line, battery assembly equipment, lithium cell production line, battery welding systems, battery testing systems, Indygreen Technologies" />
 
-<!-- Robots -->
-<meta name="robots" content="index, follow" />
+<!-- Canonical Tag -->
+<link rel="canonical" href="https://www.indygreentech.com/semi-auto-prismatic-lines.html" />
 
-<!-- Author & Publisher -->
-<meta name="author" content="Indygreen Technologies" />
-<meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
-
-<!-- Open Graph -->
-<meta property="og:title" content="Solar Aluminum Frame | Durable PV Module Frames - Indygreen Technologies" />
-<meta property="og:description" content="Indygreen Technologies offers high-quality Solar Aluminum Frames for PV modules, providing durability, rigidity, and reliable performance in solar panel production." />
-<meta property="og:url" content="https://www.indygreentech.com/solar-aluminum-frame.html" />
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Semi-Automatic Lines for Prismatic Lithium Battery Manufacturing | Indygreen Technologies" />
+<meta property="og:description" content="Efficient semi-automatic assembly lines for prismatic lithium batteries — designed for cell welding, assembly, and quality testing to ensure high productivity and reliability." />
 <meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.indygreentech.com/semi-auto-prismatic-lines.html" />
+<meta property="og:image" content="https://www.indygreentech.com/images/semi-auto-prismatic-line.png" />
 <meta property="og:site_name" content="Indygreen Technologies" />
 
-<!-- Twitter Card -->
+<!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Solar Aluminum Frame | Durable PV Module Frames - Indygreen Technologies" />
-<meta name="twitter:description" content="Premium Solar Aluminum Frames by Indygreen Technologies for durable, rigid, and long-lasting PV module assembly." />
-
-<!-- Canonical -->
-<link rel="canonical" href="https://www.indygreentech.com/solar-aluminum-frame.html" />
-
+<meta name="twitter:title" content="Semi-Automatic Lines for Prismatic Lithium Battery Manufacturing | Indygreen Technologies" />
+<meta name="twitter:description" content="Semi-auto lines for prismatic lithium battery production — precision-engineered for efficient assembly, welding, and testing operations." />
+<meta name="twitter:image" content="https://www.indygreentech.com/images/semi-auto-prismatic-line.png" />
+<meta name="twitter:site" content="@IndygreenTech" />
 
 
    <!-- Bootstrap CSS -->
@@ -319,24 +314,25 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/breadcumb.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Solar Aluminum Frame</h1>
+<h1 class="title text-white">Semi Auto Lines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
+<a title="Homepage" href="lithium-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="solar-panel-production-lines.html" class="text-white"><i class="ti ti-home"></i>Raw Materials</a>
+<a title="Homepage" href="prismatic-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Prismatic Batteries Lines</a>
+</span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Solar Aluminum Frame</span>
+<span class="text-white">Semi Auto Lines</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -348,10 +344,10 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/aluminum-frames.png" alt="Solar Aluminum Frame in India" title="Solar Aluminum Frame in India" class="w-100">
+        <img src="img/prismatic-assembley-line.png" alt="Semi Auto Lines in India" title="Semi Auto Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Solar Aluminum Frame</strong></h2>
+        <h2><strong>Semi Auto Lines</strong></h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
     </div>
 </div>
