--- a/casing.html
+++ b/casing.html
@@ -1,36 +1,39 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Title -->
-  <title>About Indygreen Technologies - Solar & Lithium Battery </title>
+  <head>
+<!-- Title -->
+<title>Battery Casings for Lithium Cell Lines | Indygreen Technologies</title>
 
-  <!-- Meta Description -->
-  <meta name="description" content="Learn about Indygreen Technologies, a global renewable energy company with 15+ years of expertise in solar, lithium batteries, EV mobility, . We deliver turnkey solutions and sustainable manufacturing for industries worldwide." />
+<!-- Meta Description -->
+<meta name="description" content="Indygreen Technologies supplies high-quality battery casings for lithium Cell Lines — ensuring robust protection, safety, and durability for cylindrical, prismatic, and pouch cells." />
 
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="About Indygreen Technologies, renewable energy company, solar energy factory setup, lithium battery production lines, EV mobility solutions, turnkey renewable energy solutions, green technologies India, global energy consulting, Inderjit Singh, Harleen Kaur" />
+<!-- Meta Keywords -->
+<meta name="keywords" content="battery casings for lithium batteries, lithium battery casing, battery housing, lithium cell protection, high-quality battery casing, lithium battery raw materials, Indygreen Technologies" />
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow" />
+<!-- Canonical Tag -->
+<link rel="canonical" href="https://www.indygreentech.com/casing.html" />
 
-  <!-- Author & Publisher -->
-  <meta name="author" content="Indygreen Technologies" />
-  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Battery Casings for Lithium Cell Lines | Indygreen Technologies" />
+<meta property="og:description" content="Premium battery casings for lithium battery production — designed for safety, durability, and protection in cylindrical, prismatic, and pouch cells." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.indygreentech.com/casing.html" />
+<meta property="og:image" content="https://www.indygreentech.com/images/casing.png" />
+<meta property="og:site_name" content="Indygreen Technologies" />
 
-  <!-- Open Graph (Social Sharing) -->
-  <meta property="og:title" content="About Indygreen Technologies - Renewable Energy Experts" />
-  <meta property="og:description" content="Indygreen Technologies is a forward-looking renewable energy company offering solar, lithium battery, and EV  with 15+ years of expertise." />
-  <meta property="og:url" content="https://www.indygreentech.com/about" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Indygreen Technologies" />
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Battery Casings for Lithium Cell Lines | Indygreen Technologies" />
+<meta name="twitter:description" content="High-quality battery casings for lithium battery production — ensuring safety, durability, and protection for cylindrical, prismatic, and pouch cells." />
+<meta name="twitter:image" content="https://www.indygreentech.com/images/casings.png" />
+<meta name="twitter:site" content="@IndygreenTech" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="About Indygreen Technologies - Renewable Energy Experts" />
-  <meta name="twitter:description" content="Global renewable energy company delivering turnkey solar, EV, lithium battery  across Asia, Africa & the Middle East." />
 
-  <!-- Canonical -->
-<link rel="canonical" href="https://www.indygreentech.com/about"/>
+   <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -311,20 +314,22 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/abt-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-dark">About Us</h1>
+<h1 class="title text-white">Casing</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
-<a title="Homepage" href="index.html" class="text-dark"><i class="ti ti-home"></i>Home</a>
+<a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
-<span class="ttm-bread-sep text-dark">/</span>
-<span class="text-dark">About Us</span>
+<span class="ttm-bread-sep text-white">/</span>
+<a title="Homepage" href="lithium-cell-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Cell Lines</a>
+<span class="ttm-bread-sep text-white">/</span>
+<span class="text-white">Casing</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -332,128 +337,18 @@
 </div><!-- /.container -->                      
 </section>
 <!-- About Us -->
- <div class="head-main pt-5">
-    <div class="container head-main-inner">
-        <h2 class="header-tag text-light">About INDYGREEN TECHNOLOGIES</h2>
+ 
+<div class="container py-5">
+<div class="product col-lg-12">
+    <div class="product-image col-lg-4">
+        <img src="img/DEMO.png" alt="Casing in India" title="Casing in India" class="w-100">
     </div>
- </div>
-<section class="about-us py-5">
-<div class="container">
-<div class="about">
-<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-xs-12 about_us-img">
-<img src="img/about-1.png" alt="Who We Are" title="Who We Are" class="w-100 rounded">
-</div>
-
-<div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-xs-12 about_us-content align-self-center">
-    <h3 class="sub-head-abt"><strong>Who We Are</strong></h3>
-    <br>
-<p><b>INDYGREEN TECHNOLOGIES</b> is a dynamic and innovation-driven renewable energy company founded by first-generation technopreneurs with a passion for clean and sustainable technologies. With more than 15 years of expertise in solar energy, electric mobility (EV), lithium battery solutions, we are committed to accelerating the global transition towards green and sustainable energy.</p>
-    <br>
-
-<p>Our journey began with the vision of bridging the global energy gap by providing industries, investors, and governments with cost-effective, future-ready technology solutions. Built on a foundation of technical excellence and commercial expertise, we specialize in designing and delivering turnkey factory setup solutions that empower businesses to achieve efficiency, profitability, and sustainability.</p>
-<br>
-<p>Guided by our motto, “<b><span class="text-success">Your Green Partner</span></b>,” we continue to create opportunities that redefine industries and contribute to building a cleaner, greener planet for generations to come.</p>
+    <div class="product-description col-lg-8">
+        <h2><strong>Casing</strong></h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+    </div>
 </div>
 </div>
-</div>
-
-<div class="container py-5">
-<div class="about-sec">
-<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-xs-12 about_us-img">
-<img src="img/about-2.png" alt="What We Do" title="What We Do" class="w-100 rounded">
-</div>
-
-<div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-xs-12 about_us-content align-self-center">
-    <h3 class="sub-head-abt"><strong>What We Do</strong></h3>
-    <br>
-<p>At INDYGREEN TECHNOLOGIES, we provide comprehensive <b>renewable energy solutions</b> that empower industries, governments, and investors to embrace <b>green technologies</b> with confidence. Our expertise lies in delivering end-to-end turnkey solutions that cover the entire lifecycle of <b>factory setup</b>, from design and planning to installation, execution, and market support.</p>
-<br>
-<p>We specialize in setting up <b>solar panel manufacturing plants</b>, <b>EV and lithium battery pack production lines</b>, and that are built to meet international quality standards while ensuring efficiency and scalability. With a strong focus on <b>cost-effectiveness</b> and <b>technology innovation</b>, our solutions help businesses achieve long-term profitability and sustainability.</p> <br>
-</div>
-</div>
-</div>
-
-<div class="container py-5">
-<div class="abt-points">
-    <strong><span class="abt-core">Our Core Services & Expertise</span></strong>
-    <br>
-    <ul class="custom-bullets">
-  <li><b>Solar Energy Factory Setup</b> – Designing and executing complete solar panel manufacturing plants.</li>
-  <li><b>EV & Lithium Battery Pack Production Lines</b> – Advanced setups for electric vehicle batteries and energy storage systems.</li>
-  
-  <li><b>Business & Technology Consulting</b> – Guidance for investment planning, diversification, and adoption of new technologies.</li>
-  <li><b>Global Supply Chain & Market Expansion</b> – Helping international equipment manufacturers and raw material suppliers establish their presence in Asia-Pacific, Africa, and the Middle East.</li>
-</ul>
-<br>
-<p class="mini-text">With over <b>50+ years of combined hands-on expertise</b>, our team ensures every project is delivered with technical precision, commercial viability, and long-term sustainability</p>
-</div>
-</div>
-
-<div class="container">
-<div class="about">
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 about_us-img">
-<img src="img/about-3.png" alt="Why Choose Us" title="Why Choose Us" class="w-100 rounded">
-</div>
-
-<div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12 about_us-content align-self-center">
-    <h4 class="sub-head-abt"><strong>Why Choose Us</strong></h4>
-    <br>
-<ul class="custom-bullets">
-  <li>Proven execution of >5 GW of solar production lines and >2 GWh of lithium battery lines.</li>
-  <li>Expertise in solar energy, EV mobility, .</li>
-  <li>Collaboration with global technology leaders, investors, and government agencies.</li>
-  <li>A strong commitment to delivering cost-effective, high-quality, and innovative renewable energy solutions.</li>
-</ul>
-</div>
-</div>
-</div>
-</section>
-<!-- Team Two -->
-<section class="team-two py-5 bg-light">
-<div class="container">
-<div class="row">
-
-<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 team-content-side">
-<div class="bg-white p-3">
-<div class="team-imge">
-<img src="img/about-inrderjeet.png" alt="Inderjit Singh" title="Inderjit Singh">
-</div>
-
-<div class="team-content">
-<h5 class="text-center w-100 mt-4">Inderjit Singh</h5>
-<span class="font-italic text-center w-100 font-weight-bold d-block mb-3">Founder & Managing Director,</span>
-<p><b>Inderjit</b> is a dynamic entrepreneur and renewable energy professional with strong academic and technical expertise. A Master’s graduate in Micro & Nano Technologies from the prestigious Indian Institute of Science (IISc), Bangalore, he began his career working with leading US-based multinational companies, gaining exposure to cutting-edge technologies. <br>
-
-With more than 15 years of experience, Inderjit has worked across the United States, Canada, and Germany, building global expertise in emerging renewable energy technologies. He has also contributed as a stakeholder in World Bank projects on clean and green technologies across Southeast Asia and Africa. His role as a consultant in “Make in India” programs reflects his commitment to strengthening domestic manufacturing and advancing sustainable energy solutions.
-<br>
-Driven by strong technical knowledge and an innovative business mindset, Inderjit established his own renewable energy venture. Under his leadership, the company has successfully executed more than 5 GW of Solar Panel Production Lines in India and overseas, along with over 2 GWh of Lithium Battery Pack Production Lines. His vision for green, clean, and sustainable energy continues to drive impactful projects worldwide, shaping the future of the renewable energy ecosystem.</p>
-</div>
-</div>
-</div>
-
-
-<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 team-content-side">
-<div class="bg-white p-3">
-<div class="team-imge">
-<img src="img/harleen-kaur.jpg" alt="Harleen Kaur" title="Harleen Kaur">
-</div>
-
-<div class="team-content">
-<h5 class="text-center w-100 mt-4">Harleen Kaur</h5>
-<span class="font-italic text-center w-100 font-weight-bold d-block mb-3">Director-HR, Operations & Finance</span>
-<p><b>Harleen</b> is a Postgraduate in Science from Delhi University, India, bringing over 15 years of professional expertise in Business Process Analysis, Finance Operations & Management, and Customer Services. With a strong background in operations and people management, she has played a key role in driving organizational efficiency and business growth. <br>
-
-Throughout her career, Harleen has demonstrated excellent leadership qualities, team-building skills, and strategic management capabilities. At the company, she oversees core daily operations, ensuring smooth execution of projects, financial control, and customer satisfaction. Her ability to streamline processes, lead diverse teams, and deliver results makes her a valuable driving force behind the company’s success.
-<br>
-Balancing her professional and personal life with ease, Harleen is also a mother of two, which adds depth to her role as both a dedicated homemaker and accomplished entrepreneur. Her unique blend of business acumen, multitasking skills, and leadership strength enables her to contribute meaningfully to the company’s long-term vision. Harleen continues to inspire by combining family values with professional excellence, making her an integral part of the organization’s growth journey.</p>
-</div>
-</div>
-</div>
-
-</div>
-</div>
-</section>
-
 
   <!-- Footer -->
 <footer class="py-4">
@@ -487,7 +382,7 @@ Balancing her professional and personal life with ease, Harleen is also a mother
 
 
 
-<h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
+  <h6><span class="font-italic font-weight-bold text-center catalog">Company Catalog</span></h6>
 <div class="scanner text-center">
 <img src="img/scanner.png" alt="Company Catalog" title="Company Catalog" class="w-50">
 </div>
@@ -617,5 +512,6 @@ Balancing her professional and personal life with ease, Harleen is also a mother
 <script type="text/javascript" src="js/ma5-menu.min.js"></script>
 <script type="text/javascript" src="js/animationCounter.min.js"></script>
 <!-- Slider Item-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
