--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -175,19 +175,19 @@
 
 <li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="LIB Separator Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
+<li class="nav-item mr-0"><a href="lib-seperator-lines.html" title="LIB Separator Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
+<li class="nav-item mr-0"><a href="giga-factories.html" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Lab/Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/Pilot Lines</a>
+<li class="nav-item mr-0"><a href="lab-pilot-lines.html" title="Lab/Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/Pilot Lines</a>
 </li>
 <li class="nav-item mr-0"><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
-<li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="#" title="Belt Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Seperator</a></li>
-<li class="nav-item mr-0"><a href="#" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
-<li class="nav-item mr-0"><a href="#" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
+<li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
+<li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="Belt Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Seperator</a></li>
+<li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
+<li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
 </li>
 </ul>
@@ -285,16 +285,16 @@
 
 <li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
   <ul>
-<li><a href="#" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
-<li><a href="#" title="Giga Factories">Giga Factories</a></li>
-<li><a href="#" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
+<li><a href="lib-seperator-lines.html" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
+<li><a href="giga-factories.html" title="Giga Factories">Giga Factories</a></li>
+<li><a href="lab-pilot-lines.html" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
 <li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
 <ul>
-<li><a href="#" title="Copper Foil">Copper Foil</a></li>
-<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="#" title="Belt Seperator">Belt Seperator</a></li>
-<li><a href="#" title="Electrolyte">Electrolyte</a></li>
-<li><a href="#" title="Casing">Casing</a></li>
+<li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
+<li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="belt-separator.html" title="Belt Seperator">Belt Seperator</a></li>
+<li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
+<li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
 </li>
 </ul>
@@ -342,7 +342,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="LIB Seperator Lines in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="LIB Seperator Lines in India" title="LIB Seperator Lines in India"></a>
+        <a href="lib-seperator-lines.html" title="LIB Seperator Lines in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="LIB Seperator Lines in India" title="LIB Seperator Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">LIB Seperator Lines</h5>
@@ -350,7 +350,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="lib-seperator-lines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -358,7 +358,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Giga Factories in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Giga Factories in India" title="Giga Factories in India"></a>
+        <a href="giga-factories.html" title="Giga Factories in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Giga Factories in India" title="Giga Factories in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Giga Factories</h5>
@@ -366,7 +366,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="giga-factories.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -375,7 +375,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Lab/Pilot Lines in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Lab/Pilot Lines in India" title="Lab/Pilot Lines in India"></a>
+        <a href="lab-pilot-lines.html" title="Lab/Pilot Lines in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Lab/Pilot Lines in India" title="Lab/Pilot Lines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Lab/Pilot Lines</h5>
@@ -383,7 +383,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="lab-pilot-lines.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
