--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -176,19 +176,19 @@
 
 <li class="nav-item mr-0"><a href="lithium-cell-lines.html" title="Lithium CellLines" class="nav-link"> Lithium Cell Lines</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="LIB Separator Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
+<li class="nav-item mr-0"><a href="lib-seperator-lines.html" title="LIB Separator Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Separator Lines</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
+<li class="nav-item mr-0"><a href="giga-factories.html" title="Giga Factories" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Giga Factories</a>
 </li>
-<li class="nav-item mr-0"><a href="#" title="Lab/Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/Pilot Lines</a>
+<li class="nav-item mr-0"><a href="lab-pilot-lines.html" title="Lab/Pilot Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lab/Pilot Lines</a>
 </li>
 <li class="nav-item mr-0"><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cell Raw Materials</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="#" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
-<li class="nav-item mr-0"><a href="#" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="#" title="Belt Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Seperator</a></li>
-<li class="nav-item mr-0"><a href="#" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
-<li class="nav-item mr-0"><a href="#" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
+<li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
+<li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="Belt Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Seperator</a></li>
+<li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
+<li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
 </li>
 </ul>
@@ -286,16 +286,16 @@
 
 <li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
   <ul>
-<li><a href="#" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
-<li><a href="#" title="Giga Factories">Giga Factories</a></li>
-<li><a href="#" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
+<li><a href="lib-seperator-lines.html" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
+<li><a href="giga-factories.html" title="Giga Factories">Giga Factories</a></li>
+<li><a href="lab-pilot-lines.html" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
 <li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
 <ul>
-<li><a href="#" title="Copper Foil">Copper Foil</a></li>
-<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="#" title="Belt Seperator">Belt Seperator</a></li>
-<li><a href="#" title="Electrolyte">Electrolyte</a></li>
-<li><a href="#" title="Casing">Casing</a></li>
+<li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
+<li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="belt-separator.html" title="Belt Seperator">Belt Seperator</a></li>
+<li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
+<li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
 </li>
 </ul>
@@ -346,7 +346,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Copper Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India"></a>
+        <a href="copper-foil.html" title="Copper Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Copper Foil in India" title="Copper Foil in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Copper Foil</h5>
@@ -354,7 +354,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="copper-foil.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -362,7 +362,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Aluminum Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India"></a>
+        <a href="aluminum-foil.html" title="Aluminum Foil in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Aluminum Foil in India" title="Aluminum Foil in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Aluminum Foil</h5>
@@ -370,7 +370,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="aluminum-foil.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -379,7 +379,7 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Belt Seperator in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Belt Seperator in India" title="Belt Seperator in India"></a>
+        <a href="belt-separator.html" title="Belt Seperator in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Belt Seperator in India" title="Belt Seperator in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Belt Seperator</h5>
@@ -387,7 +387,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="belt-separator.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -401,7 +401,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Electrolyte in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India"></a>
+        <a href="electrolyte.html" title="Electrolyte in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Electrolyte in India" title="Electrolyte in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Electrolyte</h5>
@@ -409,7 +409,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="electrolyte.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
@@ -417,7 +417,7 @@
     <!-- Card 2 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Casing in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Casing in India" title="Casing in India"></a>
+        <a href="casing.html" title="Casing in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Casing in India" title="Casing in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Casing</h5>
@@ -425,7 +425,7 @@
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
-            <a href="#" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
+            <a href="casing.html" class="btn btn-custom"><i class="fa fa-info-circle me-2"></i>Explore More</a>
           </div>
         </div>
       </div>
