--- a/sitemap.html
+++ b/sitemap.html
@@ -200,16 +200,16 @@
 
 <li><a href="lithium-cell-lines.html" title="Lithium Cell Lines">Lithium Cell Lines</a>
   <ul>
-<li><a href="#" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
-<li><a href="#" title="Giga Factories">Giga Factories</a></li>
-<li><a href="#" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
+<li><a href="lib-seperator-lines.html" title="LIB Seperator Lines">LIB Seperator Lines</a></li>
+<li><a href="giga-factories.html" title="Giga Factories">Giga Factories</a></li>
+<li><a href="lab-pilot-lines.html" title="Lab/Pilot Lines">Lab/Pilot Lines</a></li>
 <li><a href="lithium-cell-raw-materials.html" title="Lithium Cell Raw Materials">Lithium Cell Raw Materials</a>
 <ul>
-<li><a href="#" title="Copper Foil">Copper Foil</a></li>
-<li><a href="#" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="#" title="Belt Seperator">Belt Seperator</a></li>
-<li><a href="#" title="Electrolyte">Electrolyte</a></li>
-<li><a href="#" title="Casing">Casing</a></li>
+<li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
+<li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
+<li><a href="belt-separator.html" title="Belt Seperator">Belt Seperator</a></li>
+<li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
+<li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
 </li>
 </ul>
