--- a/copper-foil.html
+++ b/copper-foil.html
@@ -149,7 +149,7 @@
 <li class="nav-item mr-0"><a href="semi-auto-prismatic-lines.html" title="Semi Auto Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Semi Auto Lines </a></li>
 <li class="nav-item mr-0"><a href="automatic-lines.html" title="Automatic Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Automatic Lines</a></li>
 <li class="nav-item mr-0"><a href="laser-welding-machines.html" title="Laser Welding Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Laser Welding Machines</a></li>
-<li class="nav-item mr-0"><a href="#" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
+<li class="nav-item mr-0"><a href="cell-testers-for-prismatic.html" title="Cell Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers</a></li>
 <li class="nav-item mr-0"><a href="prismatic-sorting-machines.html" title="Sorting Machine" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Sorting Machine</a></li>
 </ul>
@@ -240,7 +240,7 @@
 </ul>
 </li>
 <li>
-<a href="#" title="Solar EPC components">Solar EPC components </a>
+<a href="solar-epc-components.html" title="Solar EPC components">Solar EPC components </a>
 </li>
 
 <!-- Three -->
@@ -361,7 +361,7 @@
 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 quick_links">
 <h6><span class="font-italic font-weight-bold">Quick Links</span></h6>
 
-    <ul class="mt-2 d-block">
+  <ul class="mt-2 d-block">
   <li class="border-bottom"><a href="index.html" title="Home"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
   <li class="border-bottom"><a href="about-us.html" title="About Us"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
   <li class="border-bottom"><a href="career.html" title="Career"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
